Ver.
--------------------------------

Ver. 4.2.0 - 2022-11-10
--------------------------------
- Feature - Migrator project added to the solution (#117)

Ver. 4.1.0 - 2022-11-07
--------------------------------
- Feature - CSI service integration when a new report is created (#96)
- Feature - Maprequest with frequency > 0 management added (migration added)(#114)

Ver. 4.0.0 - 2022-11-02
--------------------------------
- Feature - Property Order added to Layer class (migration added)(sdk to be updated)(#113)

Ver. 3.10.0 - 2022-10-27
--------------------------------
- Bugfix - Fix Communication visibility (#110)
- Bugfix - Fix update of the TeamId, UpdateMissionStatus based on person and not on cache
- Bugfix - Fix sort for person actions (#112)
- Feature - Added test api to check if Tax code Volter service is available (#111)

Ver. 3.9.6 - 2022-10-05
--------------------------------
- Feature - Added visibility restriction in GetUsers API
- Feature - Possbility to disable bus producer from settings added
- Feature - Delete profile API added (#109)

Ver. 3.9.5 - 2022-09-29
--------------------------------
- Feature - TeamName property added in PersonActionDto class (#108)
- Feature - Added TeamId as filter, added FusionAuthUserGuid in TeamMembers (#108)

Ver. 3.9.4 - 2022-09-27
--------------------------------
- Feature - Support for French and Greek added (#103)
- Bugfix - Professional cannot see citizens' position, a citizen can see himself (#104)

Ver. 3.9.3 - 2022-09-22
--------------------------------
- Feature - Implementation of Delete Map Request api (#105)
- Feature - PersonId substituted with PersonGuid in AssignRolesToPerson, AssignOrganizationToPerson and SetTeamMembers API (#107)

Ver. 3.9.2 - 2022-09-14
--------------------------------
- Feature - Removed unused properties from MpaRequestDto class (#100)
- Feature - LevelId substituted with LevelName (#101)
- Feature - New test api for gamification notification (#102)

Ver. 3.9.1 - 2022-09-12