@@ -85,6 +85,10 @@
     "Notification_Gamification_CompleteWizard_Body": "You have completed the initial tutorial",
     "Notification_Gamification_FirstReport_Title": "First report created",
     "Notification_Gamification_FirstReport_Body": "You have successfully created the first report",
+    "Notification_Team_PersonAssociation_Title": "New Team",
+    "Notification_Team_PersonAssociation_Body": "You have been assigned to team: '{0}'",
+    "Notification_Team_PersonDissociation_Title": "Team dissociation",
+    "Notification_Team_PersonDissociation_Body": "You are no longer part of team: '{0}'",
     "TeamNotInOrganization": "Team {0} does not belong to organization {1}",
     "EntityOutsideOrganization": "You do not have the visibility on this item",
     "MissingPermission": "You don't have the permission to perform this operation",
