@@ -1,5 +1,6 @@
 Ver.
 --------------------------------
+- Feature - New notification for team association and dissociation (#115)
 
 Ver. 4.2.0 - 2022-11-10
 --------------------------------
